<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
    android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="1">

    <TextView android:id="@+id/selected" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_weight="1" android:gravity="center" android:textSize="128px"/>

    <LinearLayout android:layout_height="5px" android:layout_width="match_parent" android:background="#C0C0C0"></LinearLayout>
    
    <LinearLayout android:id="@+id/row1" android:layout_height="wrap_content" android:layout_width="match_parent">

        <Button android:id="@+id/card01" android:layout_height="wrap_content" android:text="@string/card01"
            android:layout_width="fill_parent" android:layout_weight="1"></Button>
        <Button android:id="@+id/card02" android:layout_height="wrap_content" android:text="@string/card02"
            android:layout_width="fill_parent" android:layout_weight="1"></Button>
        <Button android:id="@+id/card03" android:layout_height="wrap_content" android:text="@string/card03"
            android:layout_width="fill_parent" android:layout_weight="1"></Button>
        <Button android:id="@+id/card05" android:layout_height="wrap_content" android:text="@string/card05"
            android:layout_width="fill_parent" android:layout_weight="1"></Button>

    </LinearLayout>


    <LinearLayout android:id="@+id/row2" android:layout_height="wrap_content" android:layout_width="match_parent">

        <Button android:id="@+id/card08" android:layout_height="wrap_content" android:text="@string/card08"
            android:layout_width="fill_parent" android:layout_weight="1"></Button>
        <Button android:id="@+id/card13" android:layout_height="wrap_content" android:text="@string/card13"
            android:layout_width="fill_parent" android:layout_weight="1"></Button>
        <Button android:id="@+id/card21" android:layout_height="wrap_content" android:text="@string/card21"
            android:layout_width="fill_parent" android:layout_weight="1"></Button>
        <Button android:id="@+id/reset" android:layout_height="wrap_content" android:text="@string/reset"
            android:layout_width="fill_parent" android:layout_weight="1"></Button>

    </LinearLayout>


</LinearLayout>
